--- a/AP/index.html
+++ b/AP/index.html
@@ -23,7 +23,15 @@
       <div class="front">
         <h1>Frontend Developer</h1>
         <p>Creating awesome websites using the latest tools to make things look great online!</p>
-        <img src="img/icon.png" alt="">
+        <img src="img/icon.png" alt=""><br>
       </div>
+
+      <div class="codding">
+        <img src="img/codding setup1.jpg" alt="">
+      </div>
+
+      <div class="blue-container">
+        <!-- Content inside the blue container goes here -->
+    </div>
 </body>
 </html>
