--- a/AP/index.html
+++ b/AP/index.html
@@ -27,7 +27,7 @@
       </div>
 
       <div class="codding">
-        <img src="img/codding setup1.jpg" alt="">
+        <img src="img/code1.jpg" alt="">
       </div>
 
       <div class="blue-container">
