--- a/AP/index.html
+++ b/AP/index.html
@@ -45,6 +45,31 @@
     <div class="next-container">
       <h1 class="frontend-heading">Frontend Developer</h1>
       <p>I AM A WEB DEVELOPER WHO LOVES CREATING AWESOME WEBSITES USING HTML, CSS, AND REACT JS.</p>
+      <img id="html" src="img/html1.gif" alt="">
+      <img src="img/CSS.gif" alt="">
+      <img src="img/react.png" alt="">
+
+    <div class="my-skills">
+      <h2>My Skills</h2>
+      <div class="skill-bar">
+        <div class="skill-label">HTML</div>
+        <div class="skill-progress">
+          <div class="skill-html"></div>
+        </div>
+      </div>
+      <div class="skill-bar">
+        <div class="skill-label">CSS</div>
+        <div class="skill-progress">
+          <div class="skill-css"></div>
+        </div>
+      </div>
+      <div class="skill-bar">
+        <div class="skill-label">React Js</div>
+        <div class="skill-progress">
+          <div class="skill-react"></div>
+        </div>
+      </div>
     </div>
+  </div>
 </body>
 </html>
