--- a/AP/index.html
+++ b/AP/index.html
@@ -22,15 +22,6 @@
 
       <div class="front">
         <h1>Frontend Developer</h1>
-        <p>Creating awesome websites using the latest tools to make things look great online!</p>
-        <img src="img/icon.png" alt=""><br>
-      </div>
-
-      <div class="codding">
-        <img src="img/code1.jpg" alt="">
-      </div>
-
-      <div class="blue-container">
         <p><strong>Hii, I'm Ashish Pipaliya</strong><br><br>
           I make websites look good and work smoothly. Using HTML, CSS, and
           React Js, I turn designs into user-friendly web experiences. <br />
@@ -40,6 +31,23 @@
           ready to make your online stuff awesome! I enjoy making them look good
           and work smoothly
         </p>
+        <img src="img/web_design_layout.gif" alt=""><br>
+      </div>
+
+      <!-- <div class="codding">
+        <img src="img/code1.jpg" alt="">
+      </div> -->
+
+      <div class="blue-container">
+        <!-- <p><strong>Hii, I'm Ashish Pipaliya</strong><br><br>
+          I make websites look good and work smoothly. Using HTML, CSS, and
+          React Js, I turn designs into user-friendly web experiences. <br />
+          Always staying on top of the latest trends in web development. I am
+          always looking for a new projects. <br />
+          I like making things look good and work well. I'm always learning and
+          ready to make your online stuff awesome! I enjoy making them look good
+          and work smoothly
+        </p> -->
     </div>
 
     <div class="next-container">
