--- a/AP/index.html
+++ b/AP/index.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="JS/java.js">
-</head>
-<body>
+    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="JS/java.js" />
+  </head>
+  <body>
     <div class="navbar">
-        <div class="navbar-logo">
-          <a href="#">ASHISH</a>
-        </div>
-        <div class="navbar-right" id="navbarOptions">
-          <a href="#" onclick="scrollToSection('home-section')">Home</a>
-          <a href="#" onclick="scrollToSection('about-me-section')">About</a>
-          <a href="#" onclick="scrollToSection('contact-section')">Contact</a>
-        </div>
-        <div class="menu-icon" onclick="toggleMenu()">☰</div>
+      <div class="navbar-logo">
+        <a href="#">ASHISH</a>
       </div>
-
-      <div class="front">
-        <h1>Frontend Developer</h1>
-        <p><strong>Hii, I'm Ashish Pipaliya</strong><br><br>
-          I make websites look good and work smoothly. Using HTML, CSS, and
-          React Js, I turn designs into user-friendly web experiences. <br />
-          Always staying on top of the latest trends in web development. I am
-          always looking for a new projects. <br />
-          I like making things look good and work well. I'm always learning and
-          ready to make your online stuff awesome! I enjoy making them look good
-          and work smoothly
-        </p>
-        <img src="img/web_design_layout.gif" alt=""><br>
+      <div class="navbar-right" id="navbarOptions">
+        <a href="#" onclick="scrollToSection('home-section')">Home</a>
+        <a href="#" onclick="scrollToSection('about-me-section')">About</a>
+        <a href="#" onclick="scrollToSection('contact-section')">Contact</a>
       </div>
+      <div class="menu-icon" onclick="toggleMenu()">☰</div>
+    </div>
 
-      <!-- <div class="codding">
+    <div class="front">
+      <h1>Frontend Developer</h1>
+      <p>
+        <strong>Hii, I'm Ashish Pipaliya</strong><br /><br />
+        I make websites look good and work smoothly. Using HTML, CSS, and React
+        Js,I turn designs into user-friendly web experiences. Always staying on
+        top of the latest trends in web development. I am always looking for a
+        new projects.I like making things look good and work well. I'm always
+        learning and ready to make your online stuff awesome! I enjoy making
+        them look good and work smoothly
+      </p>
+      <img src="img/web_design_layout.gif" alt="" /><br />
+    </div>
+
+    <!-- <div class="codding">
         <img src="img/code1.jpg" alt="">
       </div> -->
 
-      <div class="blue-container">
-        <!-- <p><strong>Hii, I'm Ashish Pipaliya</strong><br><br>
+    <div class="blue-container">
+      <!-- <p><strong>Hii, I'm Ashish Pipaliya</strong><br><br>
           I make websites look good and work smoothly. Using HTML, CSS, and
           React Js, I turn designs into user-friendly web experiences. <br />
           Always staying on top of the latest trends in web development. I am
@@ -52,32 +52,35 @@
 
     <div class="next-container">
       <h1 class="frontend-heading">Frontend Developer</h1>
-      <p>I AM A WEB DEVELOPER WHO LOVES CREATING AWESOME WEBSITES USING HTML, CSS, AND REACT JS.</p>
-      <img id="html" src="img/html1.gif" alt="">
-      <img src="img/CSS.gif" alt="">
-      <img src="img/react.png" alt="">
+      <p>
+        I AM A WEB DEVELOPER WHO LOVES CREATING AWESOME WEBSITES USING HTML,
+        CSS, AND REACT JS.
+      </p>
+      <img id="html" src="img/html1.gif" alt="" />
+      <img src="img/CSS.gif" alt="" />
+      <img src="img/react.png" alt="" />
 
-    <div class="my-skills">
-      <h2>My Skills</h2>
-      <div class="skill-bar">
-        <div class="skill-label">HTML</div>
-        <div class="skill-progress">
-          <div class="skill-html"></div>
+      <div class="my-skills">
+        <h2>My Skills</h2>
+        <div class="skill-bar">
+          <div class="skill-label">HTML</div>
+          <div class="skill-progress">
+            <div class="skill-html"></div>
+          </div>
         </div>
-      </div>
-      <div class="skill-bar">
-        <div class="skill-label">CSS</div>
-        <div class="skill-progress">
-          <div class="skill-css"></div>
+        <div class="skill-bar">
+          <div class="skill-label">CSS</div>
+          <div class="skill-progress">
+            <div class="skill-css"></div>
+          </div>
         </div>
-      </div>
-      <div class="skill-bar">
-        <div class="skill-label">React Js</div>
-        <div class="skill-progress">
-          <div class="skill-react"></div>
+        <div class="skill-bar">
+          <div class="skill-label">React Js</div>
+          <div class="skill-progress">
+            <div class="skill-react"></div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
