--- a/AP/index.html
+++ b/AP/index.html
@@ -24,12 +24,7 @@
       <h1>Frontend Developer</h1>
       <p>
         <strong>Hii, I'm Ashish Pipaliya</strong><br /><br />
-        I make websites look good and work smoothly. Using HTML, CSS, and React
-        Js,I turn designs into user-friendly web experiences. Always staying on
-        top of the latest trends in web development. I am always looking for a
-        new projects.I like making things look good and work well. I'm always
-        learning and ready to make your online stuff awesome! I enjoy making
-        them look good and work smoothly
+        I am always looking for a new projects.I like making things look good and work well. I'm always learning and ready to make your online stuff awesome! I enjoy making them look good and work smoothly.
       </p>
       <img src="img/web_design_layout.gif" alt="" /><br />
     </div>
