--- a/AP/index.html
+++ b/AP/index.html
@@ -117,7 +117,7 @@ function openEmailClient() {
   // Replace 'Subject' with your desired subject line
   var subject = 'Hello!';
   // Replace 'Body' with your desired email body
-  var body = 'Hi, I just wanted to say hello!';
+  var body = 'Hello Ashish..';
 
   // Construct the mailto link
   var mailtoLink = 'mailto:' + emailAddress + '?subject=' + encodeURIComponent(subject) + '&body=' + encodeURIComponent(body);
