--- a/AP/index.html
+++ b/AP/index.html
@@ -13,24 +13,22 @@
         <a href="#">ASHISH</a>
       </div>
       <div class="navbar-right" id="navbarOptions">
-        <a href="#" onclick="scrollToSection('home-section')">Home</a>
-        <a href="#" onclick="scrollToSection('about-me-section')">About</a>
-        <a href="#" onclick="scrollToSection('contact-section')">Contact</a>
         <button onclick="openEmailClient()">Say Hello</button>
       </div>
-      <div class="menu-icon" onclick="toggleMenu()">☰</div>
     </div>
 
     <div class="front">
       <h1>Frontend Developer</h1>
       <p>
-        <strong>Hii, I'm Ashish Pipaliya</strong><br /><br />
-        I am always looking for a new projects.I like making things look good and work well. I'm always learning and ready to make your online stuff awesome! I enjoy making them look good and work smoothly.
+        I build websites using HTML, CSS, and React JS, ensuring they're not only visually appealing but also user-friendly and interactive.
       </p>
       <img src="img/web_design_layout.gif" alt="" /><br />
     </div>
 
     <div class="blue-container">
+      <p><strong>Hii, I'm Ashish Pipaliya</strong><br><br>
+        I make websites look good and work smoothly. Using HTML, CSS, and React Js, I turn designs into user-friendly web experiences.I am always looking for a new projects.I like making things look good and work well. I'm always learning and
+      ready to make your online stuff awesome!</p>
     </div>
 
     <div class="next-container">
