--- a/AP/index.html
+++ b/AP/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Document</title>
     <link rel="stylesheet" href="CSS/style.css" />
     <link rel="stylesheet" href="JS/java.js" />
@@ -21,15 +21,20 @@
     <div class="front">
       <h1>Frontend Developer</h1>
       <p>
-        I build websites using HTML, CSS, and React JS, ensuring they're not only visually appealing but also user-friendly and interactive.
+        I build websites using HTML, CSS, and React JS, ensuring they're not
+        only visually appealing but also user-friendly and interactive.
       </p>
       <img src="img/web_design_layout.gif" alt="" /><br />
     </div>
 
     <div class="blue-container">
-      <p><strong>Hii, I'm Ashish Pipaliya</strong><br><br>
-        I make websites look good and work smoothly. Using HTML, CSS, and React Js, I turn designs into user-friendly web experiences.I am always looking for a new projects.I like making things look good and work well. I'm always learning and
-      ready to make your online stuff awesome!</p>
+      <p>
+        <strong>Hii, I'm Ashish Pipaliya</strong><br /><br />
+        I make websites look good and work smoothly. Using HTML, CSS, and React
+        Js, I turn designs into user-friendly web experiences.I am always
+        looking for a new projects.I like making things look good and work well.
+        I'm always learning and ready to make your online stuff awesome!
+      </p>
     </div>
 
     <div class="next-container">
@@ -64,66 +69,108 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <h1>My GitHub Projects</h1>
+  
+      <div class="projects">
+          <div class="project">
+              <h2>Project 1</h2>
+              <div class="project-link">
+                  <a href="https://github.com/yourusername/project1" target="_blank">View Project on GitHub</a>
+              </div>
+          </div>
+  
+          <div class="project">
+              <h2>Project 2</h2>
+              <div class="project-link">
+                  <a href="https://github.com/yourusername/project2" target="_blank">View Project on GitHub</a>
+              </div>
+          </div>
+  
+          <div class="project">
+              <h2>Project 3</h2>
+              <div class="project-link">
+                  <a href="https://github.com/yourusername/project3" target="_blank">View Project on GitHub</a>
+              </div>
+          </div>
+  
+          <div class="project">
+              <h2>Project 4</h2>
+              <div class="project-link">
+                  <a href="https://github.com/yourusername/project4" target="_blank">View Project on GitHub</a>
+              </div>
+          </div>
+      </div>
+  
+  </div>
+  
+  
 
     <script>
-     function toggleMenu() {
-  var x = document.getElementById("navbarOptions");
-  if (x.classList.contains("show-menu")) {
-    x.classList.remove("show-menu");
-  } else {
-    x.classList.add("show-menu");
-  }
-}
+      function toggleMenu() {
+        var x = document.getElementById("navbarOptions");
+        if (x.classList.contains("show-menu")) {
+          x.classList.remove("show-menu");
+        } else {
+          x.classList.add("show-menu");
+        }
+      }
 
-function scrollToSection(sectionId) {
-  var section = document.getElementById(sectionId);
-  var offset = section.offsetTop - (window.innerHeight - section.offsetHeight) / 2;
+      function scrollToSection(sectionId) {
+        var section = document.getElementById(sectionId);
+        var offset =
+          section.offsetTop - (window.innerHeight - section.offsetHeight) / 2;
 
-  window.scrollTo({
-    top: offset,
-    behavior: "smooth",
-  });
+        window.scrollTo({
+          top: offset,
+          behavior: "smooth",
+        });
 
-  var x = document.getElementById("navbarOptions");
-  x.classList.remove("show-menu");
-}
+        var x = document.getElementById("navbarOptions");
+        x.classList.remove("show-menu");
+      }
 
-window.onscroll = function () {
-  scrollFunction();
-};
+      window.onscroll = function () {
+        scrollFunction();
+      };
 
-function scrollFunction() {
-  var btn = document.getElementById("scroll-to-top-btn");
-  if (
-    document.body.scrollTop > 20 ||
-    document.documentElement.scrollTop > 20
-  ) {
-    btn.style.display = "block";
-  } else {
-    btn.style.display = "none";
-  }
-}
+      function scrollFunction() {
+        var btn = document.getElementById("scroll-to-top-btn");
+        if (
+          document.body.scrollTop > 20 ||
+          document.documentElement.scrollTop > 20
+        ) {
+          btn.style.display = "block";
+        } else {
+          btn.style.display = "none";
+        }
+      }
 
-function scrollToTop() {
-  document.body.scrollTop = 0;
-  document.documentElement.scrollTop = 0;
-}
+      function scrollToTop() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+      }
 
+      function openEmailClient() {
+        // Replace 'your-email@example.com' with your actual email address
+        var emailAddress = "ashishpipaliya30@gmail.com";
+        // Replace 'Subject' with your desired subject line
+        var subject = "Hello!";
+        // Replace 'Body' with your desired email body
+        var body = "Hello Ashish..";
 
-function openEmailClient() {
-  // Replace 'your-email@example.com' with your actual email address
-  var emailAddress = 'ashishpipaliya30@gmail.com';
-  // Replace 'Subject' with your desired subject line
-  var subject = 'Hello!';
-  // Replace 'Body' with your desired email body
-  var body = 'Hello Ashish..';
+        // Construct the mailto link
+        var mailtoLink =
+          "mailto:" +
+          emailAddress +
+          "?subject=" +
+          encodeURIComponent(subject) +
+          "&body=" +
+          encodeURIComponent(body);
 
-  // Construct the mailto link
-  var mailtoLink = 'mailto:' + emailAddress + '?subject=' + encodeURIComponent(subject) + '&body=' + encodeURIComponent(body);
-
-  // Open the email client
-  window.location.href = mailtoLink;
-}
+        // Open the email client
+        window.location.href = mailtoLink;
+      }
     </script>
   </body>
 </html>
