--- a/AP/index.html
+++ b/AP/index.html
@@ -43,12 +43,12 @@
         I AM A WEB DEVELOPER WHO LOVES CREATING AWESOME WEBSITES USING HTML,
         CSS, AND REACT JS.
       </p>
-      <img id="html" src="img/html1.gif" alt="" />
-      <img src="img/CSS.gif" alt="" />
-      <img src="img/react.png" alt="" />
+      <img id="html" src="img/html-logo.gif" alt="" />
+      <img src="img/css1.gif" alt="" />
+      <img src="img/R1.gif" alt="" />
 
       <div class="my-skills">
-        <h2>My Skills</h2>
+        <!-- <h2>My Skills</h2> -->
         <div class="skill-bar">
           <div class="skill-label">HTML</div>
           <div class="skill-progress">
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div class="container">
-      <h1>My GitHub Projects</h1>
+      <h1>My Recent Work</h1>
   
       <div class="projects">
           <div class="project">
