--- a/AP/index.html
+++ b/AP/index.html
@@ -40,12 +40,10 @@
     <div class="next-container">
       <h1 class="frontend-heading">Frontend Developer</h1>
       <p>
-        I AM A WEB DEVELOPER WHO LOVES CREATING AWESOME WEBSITES USING HTML,
-        CSS, AND REACT JS.
-      </p>
+        I am a web developer who loves creating awesome websites using HTML, CSS and React Js.</p>
       <img id="html" src="img/html-logo.gif" alt="" />
-      <img src="img/css1.gif" alt="" />
-      <img src="img/R1.gif" alt="" />
+      <img src="img/css1.gif" alt=""/>
+      <img src="img/R1.gif" alt=""/>
 
       <div class="my-skills">
         <!-- <h2>My Skills</h2> -->
@@ -70,38 +68,45 @@
       </div>
     </div>
     <div class="container">
-      <h1>My Recent Work</h1>
+      <h1>My Recent Homepages</h1>
   
       <div class="projects">
           <div class="project">
-              <h2>Project 1</h2>
+              <h2>My Cafe</h2>
               <div class="project-link">
-                  <a href="https://github.com/ashishpipaliya30/my-cafe-website-homepage" target="_blank">View Project on GitHub</a>
+                <img src="img/my-cafe.png" alt="">
+                <p>(Using : HTML, CSS)</p>
+                  <a href="https://my-cafe-website-homepage.vercel.app/" target="_blank">Go To Show</a>
               </div>
           </div>
   
           <div class="project">
-              <h2>Project 2</h2>
+              <h2>Gym</h2>
               <div class="project-link">
-                  <a href="https://github.com/ashishpipaliya30/LensPay-CommingSoon-Page" target="_blank">View Project on GitHub</a>
+                <img src="img/Gym.png" alt="">
+                <p>(Using : HTML, CSS)</p>
+                  <a href="https://gym-home-page.vercel.app/" target="_blank">Go To Show</a>
               </div>
           </div>
   
           <div class="project">
-              <h2>Project 3</h2>
+              <h2>Uniswap</h2>
               <div class="project-link">
-                  <a href="https://github.com/ashishpipaliya30/Parolidham-Homepage" target="_blank">View Project on GitHub</a>
+                <img src="img/uniswap.png" alt="">
+                <p>(Using : HTML, CSS)</p>
+                  <a href="https://uniswap-design.vercel.app/" target="_blank">Go To Show</a>
               </div>
           </div>
   
           <div class="project">
-              <h2>Project 4</h2>
+              <h2>Online-Shop</h2>
               <div class="project-link">
-                  <a href="https://github.com/ashishpipaliya30/Gym-home-page" target="_blank">View Project on GitHub</a>
+                <img src="img/online-shop.png" alt="">
+                <p>(Using : HTML, CSS, React Js)</p>
+                  <a href="https://online-shop-tutorial.vercel.app/" target="_blank">Go To Show</a>
               </div>
           </div>
       </div>
-  
   </div>
   
   
