--- a/AP/index.html
+++ b/AP/index.html
@@ -67,6 +67,8 @@
         </div>
       </div>
     </div>
+
+<!-- 
     <div class="container">
       <h1>My Recent Homepages</h1>
   
@@ -107,7 +109,7 @@
               </div>
           </div>
       </div>
-  </div>
+  </div> -->
   
   
 
