--- a/AP/index.html
+++ b/AP/index.html
@@ -68,7 +68,7 @@
       </div>
     </div>
 
-<!-- 
+
     <div class="container">
       <h1>My Recent Homepages</h1>
   
@@ -109,7 +109,7 @@
               </div>
           </div>
       </div>
-  </div> -->
+  </div>
   
   
 
