--- a/AP/index.html
+++ b/AP/index.html
@@ -116,28 +116,24 @@
     <h2>Contact With Me</h2>
     <ul class="contact-icons">
       <li>
-        <a href="mailto:ashishpipaliya30@gamil.com" target="_blank"
-          ><i class="fas fa-envelope"></i>
-          <img id="mail" src="img/mail1.gif" alt=""
-        /></a>
+        <a href="mailto:ashishpipaliya30@gamil.com" target="_blank">
+          <i class="fas fa-envelope"></i>
+          <img id="mail" src="img/mail1.gif" alt=""/></a>
       </li>
       <li>
         <a href="https://github.com/ashishpipaliya30" target="_blank"
           ><i class="fab fa-github"></i>
-          <img id="github" src="img/github.png" alt=""
-        /></a>
+          <img id="github" src="img/github.png" alt=""/></a>
       </li>
       <li>
-        <a href="https://twitter.com/ashishpipaliy15" target="_blank"
-          ><i class="fab fa-twitter"></i>
-          <img id="twitter" src="img/twitter.jpg" alt=""
-        /></a>
+        <a href="https://twitter.com/ashishpipaliy15" target="_blank">
+          <i class="fab fa-twitter"></i>
+          <img id="twitter" src="img/twitter.jpg" alt=""/></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/ashish.pipaliya.1/" target="_blank"
-          ><i class="fab fa-instagram"></i>
-          <img id="insta" src="img/instagram.png" alt=""
-        /></a>
+        <a href="https://www.instagram.com/ashish.pipaliya.1/" target="_blank">
+          <i class="fab fa-instagram"></i>
+          <img id="insta" src="img/instagram.png" alt=""/></a>
       </li>
     </ul>
   </div>
