--- a/AP/index.html
+++ b/AP/index.html
@@ -85,7 +85,7 @@
           <div class="project">
               <h2>Gym</h2>
               <div class="project-link">
-                <img src="img/Gym.png" alt="">
+                <img src="img/gym1.png" alt="">
                 <p>(Using : HTML, CSS)</p>
                   <a href="https://gym-home-page.vercel.app/" target="_blank">Go To Show</a>
               </div>
