--- a/AP/index.html
+++ b/AP/index.html
@@ -75,15 +75,6 @@
   
       <div class="projects">
           <div class="project">
-              <h2>My Cafe</h2>
-              <div class="project-link">
-                <img src="img/my-cafe.png" alt="">
-                <p>(Using : HTML, CSS)</p>
-                  <a href="https://my-cafe-website-homepage.vercel.app/" target="_blank">Go To Show</a>
-              </div>
-          </div>
-  
-          <div class="project">
               <h2>Gym</h2>
               <div class="project-link">
                 <img src="img/gym2.png" alt="">
@@ -93,20 +84,30 @@
           </div>
   
           <div class="project">
+              <h2>My Cafe</h2>
+              <div class="project-link">
+                <img src="img/my-cafe.png" alt="">
+                <p>(Using : HTML, CSS)</p>
+                <p></p>
+                  <a href="https://my-cafe-website-homepage.vercel.app/" target="_blank">Go To Show</a>
+              </div>
+          </div>
+  
+          <div class="project">
               <h2>Uniswap</h2>
               <div class="project-link">
-                <img src="img/uniswap.png" alt="">
-                <p>(Using : HTML, CSS)</p>
-                  <a href="https://uniswap-design.vercel.app/" target="_blank">Go To Show</a>
+                <img src="img/online-shop.png" alt="">
+                <p>(Using : HTML, CSS, React Js)</p>
+                  <a href="https://online-shop-tutorial.vercel.app/" target="_blank">Go To Show</a>
               </div>
           </div>
   
           <div class="project">
               <h2>Online-Shop</h2>
               <div class="project-link">
-                <img src="img/online-shop.png" alt="">
-                <p>(Using : HTML, CSS, React Js)</p>
-                  <a href="https://online-shop-tutorial.vercel.app/" target="_blank">Go To Show</a>
+                <img src="img/Coffee.png" alt="">
+                <p>(Using : HTML, CSS, JS)</p>
+                  <a href="https://coffee-shop-ashish.vercel.app/" target="_blank">Go To Show</a>
               </div>
           </div>
       </div>
